[package]
name = "rapid-gossip-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.30"
hex-conservative = "0.2"
lightning = { version = "0.0.121" }
lightning-block-sync = { version = "0.0.121", features=["rest-client"] }
lightning-net-tokio = { version = "0.0.121" }
tokio = { version = "1.25", features = ["full"] }
tokio-postgres = { version = "=0.7.5" }
futures = "0.3"

[dev-dependencies]
lightning = { version = "0.0.121", features = ["_test_utils"] }
lightning-rapid-gossip-sync = { version = "0.0.121" }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[patch.crates-io]
bitcoin = { git = "https://github.com/benthecarman/rust-bitcoin.git", branch = "testnet4-30-2" }

lightning = { git = 'https://github.com/benthecarman/rust-lightning.git', rev = "0fe1faaa387e77acc4ca62c5b006e78677b175ae" }
lightning-rapid-gossip-sync = { git = 'https://github.com/benthecarman/rust-lightning.git', rev = "0fe1faaa387e77acc4ca62c5b006e78677b175ae" }
lightning-block-sync = { git = 'https://github.com/benthecarman/rust-lightning.git', rev = "0fe1faaa387e77acc4ca62c5b006e78677b175ae" }
lightning-net-tokio = { git = 'https://github.com/benthecarman/rust-lightning.git', rev = "0fe1faaa387e77acc4ca62c5b006e78677b175ae" }
